# merkzettel

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  org.kde.merkzettel.desktop  org.kde.merkzettel.metainfo.xml
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: azure-setup.md  experimental-share.md  handoff.md
flatpak/: org.kde.merkzettel.yml
po/: CMakeLists.txt
po/de/: merkzettel.po
src/: CMakeLists.txt  LoginPage.qml  Main.qml  TaskDelegate.qml  TaskDetailSheet.qml  TasksPage.qml  app.cpp  app.h  main.cpp
src/auth/: authmanager.cpp  authmanager.h  tokenstore.cpp  tokenstore.h
src/cache/: database.cpp  database.h
src/graph/: graphclient.cpp  graphclient.h  todoapi.cpp  todoapi.h
src/models/: tasklistsmodel.cpp  tasklistsmodel.h  tasksmodel.cpp  tasksmodel.h
src/tray/: trayicon.cpp  trayicon.h
